Fix scrolling and overflow on iOS

--- a/_assets/sass/_images.sass
+++ b/_assets/sass/_images.sass
@@ -35,6 +35,10 @@
     margin-left: -1.5em
     width: calc(100% + 1.5em)
 
+    .image__caption
+      margin-left: 1.5em
+      margin-right: 1.5em
+
     @media (min-width: 42em)
       $slope: (6em - 1.5em) / (80em - 42em)
       $base: 1.5em - $slope * 42em
@@ -61,9 +65,9 @@
         display: inline-block
         height: 3em
         left: between(40em, 44.5em, 42em, 80em)
-        right: 0
         pointer-events: none
         position: absolute
+        right: 0
 
       &::before
         background: linear-gradient(to bottom, rgba($color-white, 0), $color-white 66.66%, $color-white)
@@ -74,10 +78,12 @@
         top: calc(100% - .15em)
 
     .image__caption
+      display: block
       margin-left: 1.5em
-      margin-right: -1.5em
+      margin-right: 1.5em
       margin-top: $baseline
       position: static
+      width: calc(100vw - #{$baseline * 2})
       z-index: 0
 
       &::after,
@@ -90,14 +96,14 @@
 
       .image__caption
         margin-left: between(1.5em, 6em, 42em, 80em)
-        margin-right: between(-1.5em, -6em, 42em, 80em)
+        margin-right: between(1.5em, 6em, 42em, 80em)
 
     @media (min-width: 80em)
       margin-left: -6em
 
       .image__caption
         margin-left: 6em
-        margin-right: -6em
+        margin-right: 6em
 
   > .swiper-container
     margin-left: 1.5em
@@ -157,7 +163,7 @@
 
   &__caption
     +font-primary
-    flex: 0 0 100%
+    flex: 0 0 calc(100% - #{$baseline * 2})
     font-style: italic
     margin-top: $baseline
 
