--- a/_assets/sass/_layout.sass
+++ b/_assets/sass/_layout.sass
@@ -1,16 +1,16 @@
 html,
 body
-  height: 100vh
-  overflow: hidden
+  // height: 100vh
+  // overflow-x: hidden
+  // overflow-y: auto
   position: relative
-  width: 100vw
+  // width: 100vw
 
   &.menu-open
-    overflow-y: hidden !important
+    overflow: hidden !important
 
 body
   background: $color-white
-  overflow-y: auto
   opacity: 1
   padding: 6em 1.5em 0
   transition: background .5s, opacity .5s ease-out
