--- a/_assets/sass/pages/_study.sass
+++ b/_assets/sass/pages/_study.sass
@@ -112,6 +112,8 @@
       padding: 6em 6em 0
 
   &__section
+    overflow-x: hidden
+    
     .study__icons,
     .study__title
       opacity: 1
